@@ -1,4 +1,4 @@
-/* $Id: fetch-pop3.c,v 1.53 2007-02-09 16:48:10 nicm Exp $ */
+/* $Id: fetch-pop3.c,v 1.54 2007-03-02 09:37:40 nicm Exp $ */
 
 /*
  * Copyright (c) 2006 Nicholas Marriott <nicm@users.sourceforge.net>
@@ -292,8 +292,9 @@ restart:
 
 	mail_open(m, IO_ROUND(size));
 	default_tags(&m->tags, data->server.host, a);
-	add_tag(&m->tags, "server", data->server.host);
-	add_tag(&m->tags, "port", data->server.port);
+	add_tag(&m->tags, "server", "%s", data->server.host);
+	add_tag(&m->tags, "port", "%s", data->server.port);
+	add_tag(&m->tags, "server_uid", "%s", data->uid);
 
 	flushing = 0;
 	off = lines = 0;
