@@ -1,3 +1,7 @@
+02 March 2007
+
+* Made add_tag use varargs and added a server_uid tag to POP3/IMAP messages.
+
 28 February 2007
 
 * Man page cleanups, from Tamas TEVESZ.
@@ -65,4 +69,4 @@
   the mail was very rarely reallocated, now that the header is added it is.
 * Changed all the descriptions to static buffers and audited use of snprintf.
 
-$Id: CHANGES,v 1.19 2007-02-28 09:20:51 nicm Exp $
+$Id: CHANGES,v 1.20 2007-03-02 09:37:40 nicm Exp $
